fixed layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -66,15 +66,31 @@ body {
   background-color: var(--clr-bg-topbar-light);
   border-bottom: 1px solid var(--clr-bg-topbar-divider-light);
 }
-
 .page-wrapper.dark .topbar {
   background-color: var(--clr-bg-topbar-dark);
   border-bottom: 1px solid var(--clr-bg-topbar-divider-dark);
 }
 
 /* DESKTOP || MOBILE */
-.desktop { display: flex; }
+.desktop {
+  display: flex; 
+  width: 100%;
+  height: 100%;
+}
 .mobile { display: none; }
+
+/* Wrapper for "Create a note" button */
+.topbar-left-side {
+  display: flex;
+  align-items: center;
+  max-width: 265px;
+  width: 100%;
+  padding: 0 10px;
+  border-right: 1px solid var(--clr-bg-topbar-divider-light);
+}
+.page-wrapper.dark .topbar-left-side {
+  border-right: 1px solid var(--clr-bg-topbar-divider-dark);
+}
 
 /* "Create a note" button */
 .topbar-create-note-button {
